include/NovelRT.Interop/Graphics/NrtRGBAConfig.h

  typedef struct RGBAConfigHandle* NrtRGBAConfig;