src/NovelRT.DotNet/Interop/Graphics/NovelRT.cs


        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_getTransform([NativeTypeName("NrtBasicFillRect")] IntPtr rect, [NativeTypeName("NrtTransform *")] NrtTransform* outputTransform);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_setTransform([NativeTypeName("NrtBasicFillRect")] IntPtr rect, NrtTransform inputTransform);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int Nrt_BasicFillRect_getLayer([NativeTypeName("NrtBasicFillRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_setLayer([NativeTypeName("NrtBasicFillRect")] IntPtr rect, [NativeTypeName("int32_t")] int inputLayer);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtBool")]
        public static extern int Nrt_BasicFillRect_getActive([NativeTypeName("NrtBasicFillRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_setActive([NativeTypeName("NrtBasicFillRect")] IntPtr rect, [NativeTypeName("NrtBool")] int inputBool);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_executeObjectBehaviour([NativeTypeName("NrtBasicFillRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_getColourConfig([NativeTypeName("NrtBasicFillRect")] IntPtr rect, [NativeTypeName("NrtRGBAConfig *")] IntPtr* outputColourConfig);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_setColourConfig([NativeTypeName("NrtBasicFillRect")] IntPtr rect, [NativeTypeName("NrtRGBAConfig")] IntPtr inputColourConfig);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_BasicFillRect_getAsRenderObjectPtr([NativeTypeName("NrtBasicFillRect")] IntPtr rect, [NativeTypeName("NrtRenderObject *")] IntPtr* outputRenderObject);

        [DllImport("Interop", ExactSpelling = true)]
        public static extern NrtTransform Nrt_ImageRect_getTransform([NativeTypeName("NrtImageRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_setTransform([NativeTypeName("NrtImageRect")] IntPtr rect, NrtTransform inputTransform);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int Nrt_ImageRect_getLayer([NativeTypeName("NrtImageRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_setLayer([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("int32_t")] int inputLayer);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtBool")]
        public static extern int Nrt_ImageRect_getActive([NativeTypeName("NrtImageRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_setActive([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("NrtBool")] int inputBool);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_executeObjectBehaviour([NativeTypeName("NrtImageRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_getTexture([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("NrtTexture *")] IntPtr* outputTexture);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_setTexture([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("NrtTexture")] IntPtr inputTexture);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_getColourTint([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("NrtRGBAConfig *")] IntPtr* outputColourTint);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_setColourTint([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("NrtRGBAConfig")] IntPtr inputColourTint);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_ImageRect_getAsRenderObjectPtr([NativeTypeName("NrtImageRect")] IntPtr rect, [NativeTypeName("NrtRenderObject *")] IntPtr* outputRenderObject);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_getTransform([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtTransform *")] NrtTransform* outputTransform);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_setTransform([NativeTypeName("NrtTextRect")] IntPtr rect, NrtTransform inputTransform);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int Nrt_TextRect_getLayer([NativeTypeName("NrtTextRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_setLayer([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("int32_t")] int inputLayer);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtBool")]
        public static extern int Nrt_TextRect_getActive([NativeTypeName("NrtTextRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_setActive([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtBool")] int inputBool);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_executeObjectBehaviour([NativeTypeName("NrtTextRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_getColourConfig([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtRGBAConfig *")] IntPtr* outputColourConfig);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_setColourConfig([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtRGBAConfig")] IntPtr inputColourConfig);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* Nrt_TextRect_getText([NativeTypeName("NrtTextRect")] IntPtr rect);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_setText([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("const char *")] sbyte* inputText);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_getFontSet([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtFontSet *")] IntPtr* outputFontSet);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_setFontSet([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtFontSet")] IntPtr inputFontSet);

        [DllImport("Interop", ExactSpelling = true)]
        [return: NativeTypeName("NrtResult")]
        public static extern int Nrt_TextRect_getAsRenderObjectPtr([NativeTypeName("NrtTextRect")] IntPtr rect, [NativeTypeName("NrtRenderObject *")] IntPtr* outputRenderObject);
    }
}
